# Diamond-Hands-MCP_BRIDGE

./: .gitignore  ACTIVE_STATE.md  AGENT.md  BAMBOO.md  BRIDGE_PROTOCOL.md  CLAUDE.md  Documentation.md  GEMINI.md  README.md  brand-ascii.md  cmds.txt  handoff.md  main.py  package.json  pyproject.toml  test_out.txt
.github/workflows/: codeql.yml  pltrf-check.yml
behavior/: context-entropy.md  context-orientation.md  context-rules.md  context-token-limits.md  context-window.md
config/: README.md  diamond-hands.example.yaml  markets.example.yaml  markets.yfinance.yaml
data/: README.md
docs/: context-orientation.md  private-algo-bridge.md  research-standards.md  robinhood-agentic-trading.md  trade-rules.md
docs/memory-ctx/: shakedown-trajectory.md
research/: README.md  base_trading-setup.md
scripts/: learn_diamondhands_cli.py  start_diamondhands.sh
skills/: skill-map.md
src/: README.md
src/trading_mcp_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/trading_system/: MOTD.py  __init__.py  bridge_config.py  bridge_runtime.py  cli.py  cli_functions.py  config.py
src/trading_system/backtesting/: __init__.py  labels.py  walkforward.py
src/trading_system/contracts/: __init__.py  types.py
src/trading_system/data/: __init__.py  base.py  models.py  providers.py
src/trading_system/features/: flow.py  regime.py  sentiment.py  technical.py
tests/: README.md  dh_sim_bot.py  test_backtesting.py  test_bridge_cli.py  test_contracts.py  test_features.py  test_scenarios.py
workflows/: PRD-docs.md  TDD-docs.md  project-setup.md  update-file.md
(+6 files in other folders)
