[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-mcp-analyzer"
version = "0.1.0"
description = "Research intelligence platform for trading analysis and downstream execution handoff."
requires-python = ">=3.9"

[project.scripts]
diamondhands = "trading_system.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
